# openpi06

./: .gitignore  000compute_norm.sh  001train_torch_valuenet.sh  002wx_cal_torch_calAt.sh  003wx_train_torch_pi06.sh  021server_valuenet.sh  022validation_right_hand_valuenet.sh  023validation_2_hand_valuenet.sh  024validation_1_hand_valuenet.sh  025validation_1_hand_valuenet_multi.sh  031server_pi06.sh  033validation_2_hand_pi06.sh  034validation_1_hand_pi06.sh  035validation_1_hand_pi06_multi.sh  041server_pi05bc.sh  043validation_1_hand_pi05.sh  10pi05test.sh  11valuenetTest.sh  12pi06test.sh  99kill_pi06.sh  99kill_value_net copy.sh  99kill_value_net.sh  README.md  check_py.py  compute_norm copy.sh  constraints.txt  debug_torch.sh  environment_convert.yml  environment_pi06_env.yml  inference.sh  label.py  pi05_requirements_backup.txt  pi05_requirements_fixed.txt  pyproject.toml  submit.sh  submit_jax.sh  submit_norm.sh  train_jax.sh  train_nohub.sh  train_torch.sh  (+16 more)
codex_plan/: answer1.md  answer_20260429_state_curve_and_indicator.md  answer_20260429_tail_rt0_override.md  answer_20260429_train_metrics_csv_png.md  answer_20260429_validation_image_keys.md  answer_20260506_git_summary_and_034_debug.md  answer_20260506_pi06_imgN_multi.md  handoff_20260423.md  plan1.md  plan2.md  plan3.md
examples/: convert_jax_model_to_pytorch.py
pdb_test/: 01test_dlimp.py  02test_openpi.py  pi05.txt  pi06.txt  (+1 more)
scripts/piper_description/: CMakeLists.txt  package.xml
scripts/piper_description/config/: visualize_urdf.rviz
scripts/piper_description/launch/: visualize.launch.py
(+133 files in other folders)
