<package format="2">
  <name>piper_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for piper_description</p>
    <p>This package contains configuration data, 3D models and launch files
for piper_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <!-- <depend>gazebo</depend> -->
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
